# blog-article

./: README.md  manage.py  requirements.txt  setup.cfg
article/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
article/migrations/: 0001_initial.py
article/templates/: article_detail.html  base.html  contact_form.html
article/templates/articles/: detail.html  list.html
article/templates/contact/: form.html  success.html
article/tests/: test_admin.py  test_models.py  test_views.py
blog/: settings.py  urls.py
blog/settings/: base.py  develop.py  production.py
