[metadata]
name = blog-article
version = 0.1
description = A simple Django blog application
author = Deependra Singh
author_email = deependrasg@gmail.com
url = https://yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3.9
    Framework :: Django :: 4.2

[options]
packages = find:

[tool:pytest]
DJANGO_SETTINGS_MODULE = blog.settings

[flake8]
exclude = .git,__pycache__,migrations
max-line-length = 91
extend-ignore = E203, W503

[isort]
profile = black
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[pylint]
disable = C0114, C0115, C0116, W0614
